<resources>
    <string name="app_name">Yamm</string>
    <string name="sum_sheet_total">Total</string>
    <string name="sum_sheet_monthly">Monthly</string>
    <string name="sum_sheet_income">Income</string>
    <string name="sum_sheet_expense">Expense</string>
    <string name="memo">Memo</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="label_history">History</string>
</resources>
